# alice-office

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.hermes  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: container-manager.md  hermes-mcp.md  hermes-plugin.md
docs/: architecture-c4.md  channel-interface-design.md  channel-interface-plan.md  channel-interface.md  channels-walkthrough.md  env-data-paths.md  google-workspace-integration-summary.md  group-chat-design.md  hermes-agent-line-gateway-comparison.md  hermes-agent-real-integration.md  hermes-agent-test.md  line-hermes-message-flow.md  mcp-plugin-per-room-migration.md  router-hermes-agent-protocol.md  runtime-env-summary.md  session-hygiene.md  testing-paths.html  testing-paths.md  troubleshooting.md
plugins/local-tools/: README.md  tools.py
plugins/local-tools/scripts/browser/: tw-ecommerce-index.json
plugins/local-tools/scripts/hr/: alice-payroll-engine.py  alice-payroll-engine.test.py  sample-employees.csv
plugins/local-tools/scripts/law/: alice-tw-law-local.py
plugins/local-tools/scripts/math/: alice-engineering-calculator.sh  alice-engineering-calculator.test.py
plugins/local-tools/scripts/research/: china-ai-assistant-index.json
scripts/: _env.py  chat_tui.py  debug_room.py  deploy_host.sh  dev_sync_src.py  e2e_smoke.py  google_reauth.py  migrate_room_keys.py  test_webhook.py  watch_restart.py
secretary-mcp/: KNOWN_ISSUES.md  README.md  config-snippet.yaml  cron-recipes.md  server.mjs
secretary-mcp/tools/: attendance.mjs  expense.mjs  line.mjs  maps.mjs  todo.mjs  translate.mjs
src/alice_office_router/: config.py  container_manager.py  core.py  google_oauth.py  group_context.py  hermes_client.py  line_client.py  line_events.py  main.py  router.py  session_hygiene.py
src/alice_office_router/channels/: __init__.py  api.py  base.py  line.py  local.py  pipeline.py
src/alice_office_router/channels/line/: __init__.py  adapter.py  client.py  dedup.py  events.py  format.py  profiles.py  verify.py
src/hermes/: config.template.yml
src/hermes/mcp/: package-lock.json  package.json
src/hermes/mcp/drive/: mcp.manifest.yaml  server.py  token_manager.py
src/hermes/mcp/gmail/: mcp.manifest.yaml  server.py
src/hermes/mcp/google-calendar/: README.md  mcp.manifest.yaml  package.json
src/hermes/mcp/secretary/: .env.example  README.md  config-snippet.yaml  mcp.manifest.yaml  package-lock.json  package.json  server.mjs
src/hermes/mcp/secretary/tools/: meeting.mjs  reminder.mjs
src/hermes/plugin/local-tools/: __init__.py  plugin.yaml  schemas.py  tools.py
src/hermes/plugin/local-tools/scripts/browser/: alice-browser-task.py  alice-browser-task.sh
src/hermes/plugin/local-tools/scripts/hr/: alice-payroll-config.2026.tw.json  alice-payroll-engine.sh  sample-attendance.csv
src/hermes/plugin/local-tools/scripts/image-ocr/: alice-image-exam-ocr.py
src/hermes/plugin/local-tools/scripts/law/: alice-tw-law-local.sh  alice-tw-law-local.test.py
src/hermes/plugin/local-tools/scripts/math/: alice-engineering-calculator.py
src/hermes/plugin/local-tools/scripts/memory/: alice-long-term-memory.py  alice-long-term-memory.sh
src/hermes/plugin/local-tools/scripts/research/: alice-assistant-ecosystem.py  alice-assistant-ecosystem.sh
src/hermes/runtime/: profile-tools.sh  pyproject.toml
tests/: conftest.py  test_channel_line.py  test_channel_local.py  test_channel_pipeline.py  test_config.py  test_container_manager.py  test_core.py  test_debug_room.py  test_dev_sync_src.py  test_e2e_smoke.py  test_google_oauth.py  test_group_context.py  test_hermes_client.py  test_hermes_shared_node_deps.py  test_line_client.py  test_line_dedup.py  test_line_events.py  test_line_format.py  test_line_verify.py  test_migrate_room_keys.py  test_router.py  test_session_hygiene.py
tests/channels/: test_api.py
tests/channels/line/: test_adapter.py  test_client.py  test_dedup.py  test_events.py  test_format.py  test_profiles.py  test_verify.py
