[project]
name = "alice-office-router"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "docker>=7.0.0",
    "pydantic-settings>=2.0.0",
    "line-bot-sdk>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-docker>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alice_office_router"]

[tool.ruff]
line-length = 100
target-version = "py312"
# data/ holds runtime state mounted into per-room Hermes containers (bundled
# skill scripts etc.) — not project source. plugins/ is Hermes plugin code
# ported from alice-tools-pack and kept intentionally close to its upstream
# form (runs inside Hermes containers, not part of the router package).
extend-exclude = ["data", "plugins"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/"]

[[tool.mypy.overrides]]
module = "linebot.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-docker>=7.0.0",
    "anyio>=4.0.0",
]
