[project]
name = "alice-office-router"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "docker>=7.0.0",
    "pydantic-settings>=2.0.0",
    "line-bot-sdk>=3.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-docker>=7.0.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alice_office_router"]

[tool.ruff]
line-length = 100
target-version = "py312"
# data/ holds runtime state mounted into per-room Hermes containers (bundled
# skill scripts etc.) — not project source. src/hermes/ holds MCP/plugin
# source templates seeded into rooms (Node ESM + Hermes plugin code ported
# from alice-tools-pack), kept intentionally close to their upstream form —
# they run inside Hermes containers, not as part of the router package.
extend-exclude = ["data", "src/hermes"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH", "T201", "D", "PLR0915"]
# D100/D104: 模組／套件層 docstring 不要求，只強制函式／類別層
ignore = ["E501", "D100", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
# scripts/ 是 CLI 除錯／部署腳本：print 是正常輸出方式，長 main() 不值得為 lint 重構
"scripts/**" = ["D", "T201", "PLR0915"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pylint]
# 近似 CLAUDE.md 原「函式長度上限 30 行」規則（statements ≈ 行數下界）
max-statements = 30

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src/"]
exclude = ["^src/hermes/"]

[[tool.mypy.overrides]]
module = "linebot.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-docker>=7.0.0",
    "types-PyYAML>=6.0.0",
    "anyio>=4.0.0",
]
